# AndroidCppCrossCompile

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.py
src/: Logger.cpp  Logger.h  Main.cpp
